<resources>
    <string name="app_name">Donation Station</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="png">png</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registration">Registration</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password_mandatory">Password</string>
    <string name="prompt_id">User ID</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_registration">Registration</string>
    <string name="load">load</string>
    <string name="load_the_file">Load the File</string>
    <string name="title_activity_employee_homepage">EmployeeHomepageActivity</string>
    <string name="view_Donations">View Donations</string>
    <string name="add_donation">Add Donations</string>
    <string name="title_activity_employee_addDonation">Add Donation</string>
    <string name="title_activity_employee_viewDonation">View Donations</string>
    <string name="prompt_timestamp">Timestamp of Donation</string>
    <string name="prompt_location">Location of Donation</string>
    <string name="prompt_shortdesc">Short Description</string>
    <string name="prompt_fulldes">Full Description</string>
    <string name="prompt_value">Value (in dollars)</string>
    <string name="prompt_category">Category</string>
    <string name="addDonation">Add</string>
    <string name="appbar_scrolling_view_behavior">scrolling_view</string>
    <string name="title_activity_user_homepage">UserHomepageActivity</string>
    <string name="view_locations">Locations</string>
    <string name="title_activity_maps">Map</string>
</resources>
