<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.AddDonationActivity">

    <EditText
        android:id="@+id/timeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/prompt_timestamp"
        android:inputType="time"
        android:text="@string/prompt_timestamp"
        app:layout_constraintBottom_toTopOf="@+id/locationOfDonation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/locationOfDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/prompt_location"
        app:layout_constraintBottom_toTopOf="@+id/shortDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeStamp" />

    <EditText
        android:id="@+id/shortDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/prompt_shortdesc"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationOfDonation" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/prompt_fulldes"
        app:layout_constraintBottom_toTopOf="@+id/value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortDescription" />

    <EditText
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:inputType="text|number"
        android:text="@string/prompt_value"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/prompt_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value" />

    <Button
        android:id="@+id/addDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="17dp"
        android:text="@string/addDonation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>