<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFACD"
    tools:context=".controllers.EmployeeHomepageActivity">

    <Button
        android:id="@+id/logoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="287dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="23dp"
        android:onClick="logout"
        android:text="@string/action_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addDonation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="134dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="40dp"
        android:onClick="addDonations"
        android:text="@string/add_donation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewDonations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:layout_marginEnd="149dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="93dp"
        android:onClick="viewDonations"
        android:text="@string/view_Donations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDonation"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="122dp"
        android:layout_height="134dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/mg"
        app:layout_constraintBottom_toBottomOf="@+id/viewDonations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="@+id/viewDonations"
        app:layout_constraintTop_toTopOf="@+id/viewDonations"
        app:layout_constraintVertical_bias="0.255" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="86dp"
        android:layout_height="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/plust"
        app:layout_constraintBottom_toBottomOf="@+id/addDonation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.624"
        app:layout_constraintStart_toStartOf="@+id/addDonation"
        app:layout_constraintTop_toTopOf="@+id/addDonation"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>